<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/main_btn1_addOne"
        android:onClick="addOneIntent"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_background"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:text="@string/main_btn1_addOne"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn2_setLimit"
        android:onClick="setLimitIntent"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_background"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:text="@string/main_btn2_setLimit"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn1_addOne" />

    <Button
        android:id="@+id/main_btn3_history"
        android:onClick="historyIntent"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_background"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:text="@string/main_btn3_history"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn2_setLimit" />

    <Button
        android:id="@+id/main_btn4_yesterday"
        android:onClick="yesterdayIntent"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_background"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:text="@string/main_btn4_yesterday"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn3_history" />

    <Button
        android:id="@+id/main_btn5_settings"
        android:onClick="settingsIntent"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_background"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:text="@string/main_btn5_settings"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn4_yesterday" />
</androidx.constraintlayout.widget.ConstraintLayout>