<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddOne">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/add_btn1_add"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_background"
        android:onClick="addOneBeer"
        android:text="@string/add_btn1_add"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_btn2_return"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/btn_background"
        android:onClick="returnHome"
        android:text="@string/main_menu_btn"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline90" />

    <TextView
        android:id="@+id/add_txt1_drunk_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add_txt1_drunk_sentence"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/add_btn1_add" />

    <TextView
        android:id="@+id/add_txt2_drunk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/set_et_numberInput"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/add_txt1_drunk_sentence"
        app:layout_constraintTop_toBottomOf="@+id/add_btn1_add" />

    <TextView
        android:id="@+id/add_txt3_goal_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_txt3_goal_sentence"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/add_txt1_drunk_sentence" />

    <TextView
        android:id="@+id/add_txt4_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_et_numberInput"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/add_txt3_goal_sentence"
        app:layout_constraintTop_toBottomOf="@+id/add_txt2_drunk" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22"/>

</androidx.constraintlayout.widget.ConstraintLayout>