<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".History">


    <Button
        android:id="@+id/history_btn5_return"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:onClick="returnHome"
        android:text="@string/main_menu_btn"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline90" />

    <Button
        android:id="@+id/history_btn1_all"
        android:onClick="showAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/history_btn1_all"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline25"/>

    <Button
        android:id="@+id/history_btn2_positive"
        android:onClick="showGood"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/history_btn2_positive"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline50"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history_btn3_negative"
        android:onClick="showBad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/history_btn3_negative"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline50"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history_btn4_delete"
        android:onClick="deleteAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/history_btn4_delete"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
    <fragment
        android:id="@+id/history_fragment"
        android:name="com.example.beermanager.FragmentOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/history_btn5_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline10">

    </fragment>


</androidx.constraintlayout.widget.ConstraintLayout>